--- a/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.ipynb
+++ b/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.ipynb
@@ -217,7 +217,7 @@
     "# Automation Predates the Term\n",
     "------\n",
     "### From 1790, the automated mill:\n",
-    "<img src=\"Oliver_Evans_-_Automated_mill.jpg\" style=\"width: 60%\">"
+    "<img src=\"Oliver_Evans_-_Automated_mill.jpg\" style=\"margin: auto; width: 60%\">"
    ]
   },
   {
@@ -634,8 +634,9 @@
     "------\n",
     "Thank you for attending!\n",
     "\n",
-    "Please see form <insert link>.\n",
-    "Presentation link <insert link>."
+    "Feedback form https://forms.gle/9E8pdkJ9jR9ybfSk7.\n",
+    "\n",
+    "Presentation link https://kahowell.net/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.slides.html."
    ]
   }
  ],
