--- a/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.ipynb
+++ b/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.ipynb
@@ -504,7 +504,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Ansible - Example Playbook\n",
     "------\n",
