Fix preso link and add some more Ansible links

--- a/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.ipynb
+++ b/presentations/2020-06-13_automation_101_ansible/automation_101_ansible.ipynb
@@ -476,7 +476,7 @@
     "    dest: /etc/hosts\n",
     "```\n",
     "`/home/user/ansible/templates/hosts.j2`:\n",
-    "```jinja2\n",
+    "```\n",
     "127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4\n",
     "::1         localhost localhost.localdomain localhost6 localhost6.localdomain6\n",
     "127.0.0.1   {{ development_hostname }}\n",
@@ -624,6 +624,21 @@
     "## Consider Red Hat training for Ansible\n",
     "## Consider Ansible Automation Platform\n",
     "- includes Ansible Tower - Web UI w/ Enterprise Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Ansible - More Resources\n",
+    "------\n",
+    "### https://github.com/sovereign/sovereign - DIY cloud via Ansible\n",
+    "### https://github.com/kahowell/ansible-kahowell - my personal Ansible automation\n",
+    "### https://github.com/jdauphant/awesome-ansible - curated list of Ansible resources (unmaintained)"
    ]
   },
   {
